--- a/index.css
+++ b/index.css
@@ -160,9 +160,9 @@ button{
 
 .parent-of-all{
     margin: auto;
-    margin-top: 0.1em;
+    margin-top: 2.2em;
     margin-bottom: 3em;
-    padding: 0;
+    padding: 0 3em 0 3em;
 
     width: min-content;   
 }
