--- a/index.css
+++ b/index.css
@@ -187,6 +187,10 @@ h3{
 
 h2{
     color: var(--colors-font-positive);
+    align-self: center;
+    text-align: center;
+
+    font-weight: 300;
 }
 
 a{
