--- a/index.css
+++ b/index.css
@@ -24,6 +24,9 @@ body{
     padding: 0;
     border-radius: 5px;
 
+    width: 100%;
+    height: 100%;
+
     font-family: var(--font-primary);
 
     overflow-y: scroll;
@@ -49,7 +52,7 @@ button{
     margin: auto;
     padding: 0 1.5em 0 0 ;
     
-    width: max-content;
+    width: 100%;
     height: 4em;
     
     align-items: center;
@@ -159,9 +162,9 @@ button{
     margin: auto;
     margin-top: 2.2em;
     margin-bottom: 3em;
-    padding: 0 3em 0 3em;
+    padding: 0 3em 0 3em;  
 
-    width: 45em;   
+    width: min-content;
 }
 
 
