--- a/index.css
+++ b/index.css
@@ -302,6 +302,12 @@ li{
 
     align-self: center;
 }
+.index-text{
+    margin: auto;
+    font-weight: 700;
+    font-size: 1.5em;
+    color: var(--colors-primary);
+}
 
 .contacts-parent{
     margin: auto;
