--- a/index.css
+++ b/index.css
@@ -111,7 +111,7 @@ button{
 
 .ButtonMenu{
     margin: auto;
-    margin-top: 5em;
+    margin-top: 1em;
     margin-bottom: 1em;
     width: 80%;
 
@@ -302,8 +302,8 @@ li{
 
     align-self: center;
 }
-
 .index-text{
+    margin: auto;
     font-weight: 700;
     font-size: 1.5em;
     color: var(--colors-primary);
@@ -409,3 +409,20 @@ li{
 
 @media (max-width: 480px) {
 }
+
+
+@media only screen and (max-device-width: 480px) {
+    .show-mobile {
+    }
+    .hide-mobile {
+      display: none;
+    }
+  }
+
+@media only screen and (min-device-width: 481px) {
+    .show-mobile {
+      display: none;
+    }
+    .hide-mobile {
+    }
+  }
